<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.fishlikewater</groupId>
    <artifactId>raiden</artifactId>
    <version>${raiden.version}</version>
    <packaging>pom</packaging>

    <name>raiden</name>

    <modules>
        <module>raiden-core</module>
        <module>raiden-spring-boot-starter</module>
        <module>raiden-spring-boot-test</module>
    </modules>

    <properties>
        <raiden.version>1.0.0</raiden.version>
        <lombok.version>1.18.30</lombok.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <hutool.version>5.8.25</hutool.version>
        <cglib.veresion>3.3.0</cglib.veresion>
        <slf4j-api.veresion>2.0.9</slf4j-api.veresion>
        <classgraph.version>4.8.162</classgraph.version>
        <gson.version>2.10.1</gson.version>
        <classgraph.version>4.8.162</classgraph.version>
        <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.user.dir>${user.dir}</main.user.dir>
        <maven-compiler.version>3.12.1</maven-compiler.version>
        <maven-source.verion>3.3.0</maven-source.verion>
        <license-maven.version>3.0</license-maven.version>
        <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
    </properties>

    <url>https://github.com/fishlikewater/raiden</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://github.com/fishlikewater/raiden/blob/master/LICENSE</url>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/fishlikewater/raiden</url>
        <connection>https://github.com/fishlikewater/raiden.git</connection>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/fishlikewater/raiden/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>fish</name>
            <email>fishlikewater@126.com</email>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.veresion}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <release>${maven.compiler.release}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source.verion}</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <!--<flattenMode>resolveCiFriendliesOnly</flattenMode>-->
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license-maven.version}</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>remove</goal>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <properties>
                        <year>${maven.build.timestamp}</year>
                        <owner>zhangxiang</owner>
                        <email>fishlikewater@126.com</email>
                    </properties>
                    <quiet>true</quiet>
                    <!--HEADER文件-->
                    <header>${main.user.dir}/HEADER</header>
                    <!--排除文件-->
                    <excludes>
                        <exclude>**/*.properties</exclude>
                        <exclude>*.sh</exclude>
                        <exclude>*.yml</exclude>
                        <exclude>.editorconfig</exclude>
                        <exclude>.gitignore</exclude>
                        <exclude>**/*.md</exclude>
                        <exclude>**/*.xml</exclude>
                    </excludes>
                    <!--严格检查-->
                    <strictCheck>true</strictCheck>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
